fixed min-height for safari so button-icons are not cropped

--- a/source/css/scss/base/_links.scss
+++ b/source/css/scss/base/_links.scss
@@ -4,6 +4,7 @@
 a,
 .a-btn-link {
   position: relative;
+  min-height: 28px;
   padding-bottom: 2px;
   color: $black;
   text-decoration: none;
